# linux-touch-gestures

./: .gitignore  Makefile.am  Makefile.in  README.md  configure  configure.ac  license.txt
doc/: Makefile.in
man/: Makefile.in
src/: .gitignore  .main.c.swp  Makefile.am  Makefile.in  array.c  array.h  common.h  configuraion.c  configuraion.h  gesture_detection.c  gesture_detection.h  gestures_device.c  gestures_device.h  input_event_array.h  int_array.c  int_array.h  keys.c  keys.h  main.c
